# wochenmail

./: .gitignore  Dockerfile  LICENSE  README.md  __main__.py  compose.yaml  pyproject.toml  send-mail.py
templates/: email.html  plain.html
wochenmail/: __main__.py  calendarhandler.py  mailhandler.py  main.py
