[tool.poetry]
name = "wochenmail"
version = "0.1.0"
description = "Send automatic briefings via e-mail"
authors = ["Johannes Arnold <johannes.arnold@stud.uni-hannover.de>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
css-inline = "^0.14.1"
requests = "^2.32.3"
html2text = "^2024.2.26"
icalendar = "^5.0.13"
minify-html = "^0.15.0"
apscheduler = "4.0.0a5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
