[project]
name = "wochenmail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=4.0.0a6",
    "css-inline>=0.18.0",
    "html2text>=2025.4.15",
    "icalendar>=6.3.2",
    "jinja2>=3.1.6",
    "requests>=2.32.5",
]
